# calendar-receipts

./: .env.example  .gitignore  CALENDAR.md  README.md  pyproject.toml
.github/workflows/: pages.yml  receipt-tests.yml
calendar_receipts/: __init__.py  evaluator.py  project_view.py
docs/: semantic-axis-phase-1-receipt-breakdown.md  semantic-axis-weekly-artifact-gates.md
expectations/weekly/: 2026-W25.yaml  2026-W26.yaml  2026-W27.yaml  2026-W28.yaml
receipts/daily/: 2026-06-15.jsonl
schemas/: expectation.schema.json  receipt.schema.json
scripts/: build_static_site.py  generate_all_project_views.py  generate_project_view.py  run_period_tests.py
site/: index.html
site/projects/semantic-axis/: index.html
templates/: semantic-axis-phase-1-receipts.jsonl  semantic-axis-receipts.example.jsonl
test-results/social/: calendar-receipts-thread-draft.json  calendar-receipts-thread-posted.json
test-results/weekly/: 2026-W25.red.json  2026-W26.red.json  2026-W27.red.json  2026-W28.red.json
tests/: test_project_view.py  test_receipt_schema.py  test_static_site.py  test_weekly_expectations.py
views/: projects.yaml
views/projects/: semantic-axis.md
